syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.pastor.hashq_mod";
option java_outer_classname = "HashService";

package simple;

service HashService {
    rpc Create (HasqHash) returns (HasqResult) {
    }
    rpc Latest (HasqRequest) returns (HasqHash) {
    }
}

message HasqRequest {
    string id = 1;
}

message HasqHash {
    int32 sequence = 1;
    string token = 2;
    string key = 3;
    string gen = 4;
    string owner = 5;
}

message HasqResult {
    bool verified = 1;
}